feat: Creation of the get-all-habits-by-user service and test
